@@ -5,17 +5,16 @@
 
 package net.neoforged.fml.util;
 
-import com.google.common.collect.Streams;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.ServiceConfigurationError;
-import net.neoforged.fml.loading.LoadingModList;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
 import net.neoforged.fml.loading.LogMarkers;
 import net.neoforged.neoforgespi.ILaunchContext;
 import net.neoforged.neoforgespi.locating.IOrderedProvider;
@@ -33,20 +32,39 @@ public final class ServiceLoaderUtil {
         return loadServices(context, serviceClass, List.of());
     }
 
+    public static <T> List<T> loadServices(ILaunchContext context, Class<T> serviceClass, Predicate<Class<? extends T>> filter) {
+        return loadServices(context, serviceClass, List.of(), filter);
+    }
+
+    public static <T> List<T> loadServices(ILaunchContext context, Class<T> serviceClass, Collection<T> additionalServices) {
+        return loadServices(context, serviceClass, additionalServices, ignored -> true);
+    }
+
     /**
      * @param serviceClass If the service class implements {@link IOrderedProvider}, the services will automatically be sorted.
      */
-    public static <T> List<T> loadServices(ILaunchContext context, Class<T> serviceClass, Collection<T> additionalServices) {
-        var serviceLoaderServices = context.loadServices(serviceClass).map(p -> {
-            try {
-                return p.get();
-            } catch (ServiceConfigurationError sce) {
-                LOGGER.error("Failed to load implementation for {}", serviceClass, sce);
-                return null;
-            }
-        }).filter(Objects::nonNull);
+    public static <T> List<T> loadServices(ILaunchContext context,
+            Class<T> serviceClass,
+            Collection<T> additionalServices,
+            Predicate<Class<? extends T>> filter) {
+        var serviceLoaderServices = context.loadServices(serviceClass)
+                .filter(p -> {
+                    if (!filter.test(p.type())) {
+                        LOGGER.debug("Filtering out service provider {} for service class {}", p.type(), serviceClass);
+                        return false;
+                    }
+                    return true;
+                })
+                .map(p -> {
+                    try {
+                        return p.get();
+                    } catch (ServiceConfigurationError sce) {
+                        LOGGER.error("Failed to load implementation for {}", serviceClass, sce);
+                        return null;
+                    }
+                }).filter(Objects::nonNull);
 
-        var servicesStream = Streams.concat(additionalServices.stream(), serviceLoaderServices).distinct();
+        var servicesStream = Stream.concat(additionalServices.stream(), serviceLoaderServices).distinct();
 
         var applyPriority = IOrderedProvider.class.isAssignableFrom(serviceClass);
         if (applyPriority) {
@@ -62,12 +80,10 @@ public final class ServiceLoaderUtil {
                     priorityPrefix = String.format(Locale.ROOT, "%8d - ", ((IOrderedProvider) service).getPriority());
                 }
 
-                if (LOGGER.isDebugEnabled(LogMarkers.CORE)) {
-                    if (additionalServices.contains(service)) {
-                        LOGGER.debug(LogMarkers.CORE, "\t{}[built-in] {}", priorityPrefix, identifyService(context, service));
-                    } else {
-                        LOGGER.debug(LogMarkers.CORE, "\t{}{}", priorityPrefix, identifyService(context, service));
-                    }
+                if (additionalServices.contains(service)) {
+                    LOGGER.debug(LogMarkers.CORE, "\t{}[built-in] {}", priorityPrefix, identifyService(context, service));
+                } else {
+                    LOGGER.debug(LogMarkers.CORE, "\t{}{}", priorityPrefix, identifyService(context, service));
                 }
             }
         }
@@ -86,33 +102,12 @@ public final class ServiceLoaderUtil {
      */
     public static String identifySourcePath(ILaunchContext context, Object object) {
         var codeLocation = object.getClass().getProtectionDomain().getCodeSource().getLocation();
-        if (codeLocation == null) {
-            return "unknown";
-        }
-        Path primaryPath;
+        Path fsLocation;
         try {
-            primaryPath = Paths.get(codeLocation.toURI());
+            fsLocation = Path.of(codeLocation.toURI());
         } catch (URISyntaxException e) {
             return codeLocation.toString();
         }
-        if (LoadingModList.get() != null) {
-            for (var plugin : LoadingModList.get().getPlugins()) {
-                if (plugin.getFile().getContents().getPrimaryPath().equals(primaryPath)) {
-                    return plugin.getFile().toString();
-                }
-            }
-            for (var gameLibrary : LoadingModList.get().getGameLibraries()) {
-                if (gameLibrary.getContents().getPrimaryPath().equals(primaryPath)) {
-                    return gameLibrary.toString();
-                }
-            }
-            for (var modFile : LoadingModList.get().getModFiles()) {
-                if (modFile.getFile().getContents().getPrimaryPath().equals(primaryPath)) {
-                    return modFile.getFile().toString();
-                }
-            }
-        }
-
-        return codeLocation.toString();
+        return PathPrettyPrinting.prettyPrint(fsLocation);
     }
 }
